<resources>
    <string name="app_name">FocusSpirit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">test@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_statistics">Records</string>
    <string name="icon_for_the_weather_condition">Icon for the Weather Condition</string>
    <string name="city">City</string>
    <string name="weather_conditions">Weather Conditions</string>
</resources>