<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.focusspirit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        android:fontFamily="@font/aldrich"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.focusspirit.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        android:fontFamily="@font/aldrich"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.focusspirit.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        android:fontFamily="@font/aldrich"
        tools:layout="@layout/fragment_statistics" />
</navigation>