<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/aldrich"
            android:text="Start Focus" />


        <ImageView
            android:id="@+id/btnMusic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/mute"
            app:tint="@color/teal_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon_for_the_weather_condition"
                android:src="@drawable/weather_01d" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/weather_conditions" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textSize="25sp"
                    android:fontFamily="@font/aldrich"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/temp" />

                <TextView
                    android:id="@+id/current_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:textSize="25sp" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewAnimation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="150dp" />

        <TextView
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="Skills Learned: 0"
            android:textSize="24sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>